--- a/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           volumeMounts:
             - name: checks
               mountPath: /usr/share/trento/checks
-          {{- if .Values.global.rabbitmq.mtls.enabled }}
+          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
             - name: rabbitmq-mtls-certs
               mountPath: /var/rabbitmq/ssl
               readOnly: true
@@ -107,7 +107,7 @@ spec:
             - name: checks
               mountPath: /usr/share/trento/checks
               readOnly: true
-          {{- if .Values.global.rabbitmq.mtls.enabled }}
+          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
             - name: rabbitmq-mtls-certs
               mountPath: /var/rabbitmq/ssl
               readOnly: true
@@ -115,7 +115,7 @@ spec:
       volumes:
         - name: checks
           emptyDir: {}
-      {{- if .Values.global.rabbitmq.mtls.enabled }}
+      {{- if .Values.global.rabbitmq.auth.tls.enabled }}
         - name: rabbitmq-mtls-certs
           secret:
             secretName: wanda-rabbitmq-client-tls
