--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -17,6 +17,11 @@ global:
   rabbitmq:
     name: rabbitmq
     servicePort: 5672
+    auth:
+      username: "trento"
+      password: "trento"
+      tls:
+        enabled: false
 
 ### Sub Charts Specific Values ###
 trento-web:
@@ -65,8 +70,11 @@ rabbitmq:
   enabled: true
   persistence:
     enabled: true
-  auth:
-    username: trento
-    password: trento
   service:
     type: LoadBalancer
+  auth:
+    tls:
+      enabled: false
+      existingSecret: rabbitmq-tls-server
+      existingSecretFullChain: false
+  extraEnvVarsCM: trento-server-rabbitmq-configmap
