Setup rabbitmq tls (#135)

--- a/charts/trento-server/charts/trento-web/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-web/templates/deployment.yaml
@@ -28,10 +28,15 @@ spec:
       serviceAccountName: {{ include "trento-web.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if .Values.saml.enabled }}
       volumes:
+      {{- if .Values.saml.enabled }}
       - name: saml-data
         emptyDir: {}
+      {{- end }}
+      {{- if .Values.global.rabbitmq.auth.tls.enabled }}
+      - name: rabbitmq-mtls-certs
+        secret:
+          secretName: rabbitmq-tls-client-web
       {{- end }}
       initContainers:
         - name: create-trento-db
@@ -86,10 +91,15 @@ spec:
         - name: init
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.saml.enabled }}
           volumeMounts:
+          {{- if .Values.saml.enabled }}
             - name: saml-data
               mountPath: {{ .Values.saml.spDir }}
+          {{- end }}
+          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
+            - name: rabbitmq-mtls-certs
+              mountPath: /var/rabbitmq/ssl
+              readOnly: true
           {{- end }}
           envFrom:
             - configMapRef:
@@ -103,10 +113,15 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.saml.enabled }}
           volumeMounts:
+          {{- if .Values.saml.enabled }}
             - name: saml-data
               mountPath: {{ .Values.saml.spDir }}
+          {{- end }}
+          {{- if .Values.global.rabbitmq.auth.tls.enabled }}
+            - name: rabbitmq-mtls-certs
+              mountPath: /var/rabbitmq/ssl
+              readOnly: true
           {{- end }}
           envFrom:
             - configMapRef:
