Make rabbitmq configmap name dynamic

--- a/charts/trento-server/values.yaml
+++ b/charts/trento-server/values.yaml
@@ -77,4 +77,4 @@ rabbitmq:
       enabled: false
       existingSecret: rabbitmq-tls-server
       existingSecretFullChain: false
-  extraEnvVarsCM: trento-server-rabbitmq-configmap
+  extraEnvVarsCM: "{{ .Release.Name }}-rabbitmq-configmap"
