Add initial MCP Server helm chart
Signed-off-by: Antonio Gamez Diaz <antonio.gamez@suse.com>

--- a/charts/trento-server/Chart.yaml
+++ b/charts/trento-server/Chart.yaml
@@ -16,6 +16,9 @@ dependencies:
   - name: trento-wanda
     version: ">0.0.0-0"
     condition: trento-wanda.enabled
+  - name: trento-mcp-server
+    version: ">0.0.0-0"
+    condition: trento-mcp-server.enabled
   - name: postgresql
     version: ">0.0.0"
     condition: postgresql.enabled
