--- a/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
+++ b/charts/trento-server/charts/trento-wanda/templates/deployment.yaml
@@ -102,7 +102,7 @@ spec:
             - name: checks
               mountPath: /usr/share/trento/checks
               readOnly: true
-            {{- if and .Values.global.rabbitmq.tls.enabled .Values.global.rabbitmq.tls.mtls.enabled }}
+            {{- if .Values.global.rabbitmq.tls.mtls.enabled }}
             - name: wanda-client-cert
               mountPath: /etc/certs/rabbitmq
               readOnly: true
@@ -110,7 +110,7 @@ spec:
       volumes:
         - name: checks
           emptyDir: {}
-        {{- if and .Values.global.rabbitmq.tls.enabled .Values.global.rabbitmq.tls.mtls.enabled }}
+        {{- if .Values.global.rabbitmq.tls.mtls.enabled }}
         - name: wanda-client-cert
           secret:
             secretName: {{ include "trento-wanda.fullname" . }}-client-cert
